# rsync-backup-cluster

./: .gitignore  README.rst  requirements.txt  setup.cfg  tox.ini
examples/: scheduler.yaml  worker.yaml
rsync_backup_cluster/: config.py  job_factory.py  jobs.py  log.py  rq.py  utils.py
rsync_backup_cluster/cmd/: scheduler.py  worker.py
rsync_backup_cluster/scheduler/: app.py  jobs.py  queues.py  schema.py  workers.py
rsync_backup_cluster/tests/: test_noop.py
rsync_backup_cluster/worker/: app.py
