[metadata]
name = rsync-backup-cluster
summary = Rsync cluster
description-file =
    README.rst
author = Tobias Urdin
author-email = tobias.urdin@gmail.com
home-page = https://github.com/tobias-urdin/rsync-backup-cluster
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    rsync_backup_cluster

[entry_points]
console_scripts =
    rsync-backup-scheduler = rsync_backup_cluster.cmd.scheduler:main
    rsync-backup-worker = rsync_backup_cluster.cmd.worker:main
